Add aboutus.html, update other pages, and add new media

--- a/Reviews.html
+++ b/Reviews.html
@@ -391,8 +391,15 @@
 <body>
 
     <header class="page-header">
-        <a href="index.html" class="header-logo">VOYA</a>
-        <a href="index.html" class="back-home-link">BACK TO HOME</a>
+        <a href="Homepage.html" class="header-logo">VOYA</a>
+        <nav class="nav-menu" style="display:flex;gap:2rem;align-items:center;">
+            <a href="index.html" class="nav-button" style="background-color:#00bcd4;color:white;padding:10px 20px;border:none;font-family:'Inter',sans-serif;font-size:0.9rem;font-weight:600;text-transform:uppercase;cursor:pointer;text-decoration:none;">Home</a>
+            <a href="Aboutus.html" class="nav-button" style="background-color:#00bcd4;color:white;padding:10px 20px;border:none;font-family:'Inter',sans-serif;font-size:0.9rem;font-weight:600;text-transform:uppercase;cursor:pointer;text-decoration:none;">About Us</a>
+            <a href="form.html" class="nav-button" style="background-color:#00bcd4;color:white;padding:10px 20px;border:none;font-family:'Inter',sans-serif;font-size:0.9rem;font-weight:600;text-transform:uppercase;cursor:pointer;text-decoration:none;">Begin Your Journey</a>
+            <a href="experience.html" class="nav-button" style="background-color:#00bcd4;color:white;padding:10px 20px;border:none;font-family:'Inter',sans-serif;font-size:0.9rem;font-weight:600;text-transform:uppercase;cursor:pointer;text-decoration:none;">Our Experiences</a>
+            <a href="Reviews.html" class="nav-button" style="background-color:#00bcd4;color:white;padding:10px 20px;border:none;font-family:'Inter',sans-serif;font-size:0.9rem;font-weight:600;text-transform:uppercase;cursor:pointer;text-decoration:none;">Testimonials</a>
+            <a href="contact.html" class="nav-button" style="background-color:#00bcd4;color:white;padding:10px 20px;border:none;font-family:'Inter',sans-serif;font-size:0.9rem;font-weight:600;text-transform:uppercase;cursor:pointer;text-decoration:none;">Contact Us</a>
+        </nav>
     </header>
 
     <main>
