--- a/experience.html
+++ b/experience.html
@@ -543,8 +543,15 @@
 <body>
     <!-- Header Navigation -->
     <nav class="header-nav">
-        <a href="#" class="logo">VOYA</a>
-        <a href="form.html" class="nav-button">BEGIN YOUR JOURNEY</a>
+        <a href="index.html" class="logo">VOYA</a>
+        <div class="nav-menu" id="navMenu" role="menu" style="position:absolute;right:2rem;top:50%;transform:translateY(-50%);display:none;flex-direction:row;gap:2rem;background:rgba(0,0,0,0.8);padding:1rem 2rem;border-radius:30px;">
+            <a href="index.html" class="nav-button">Home</a>
+            <a href="Aboutus.html" class="nav-button">About Us</a>
+            <a href="form.html" class="nav-button">Begin Your Journey</a>
+            <a href="experience.html" class="nav-button">Our Experiences</a>
+            <a href="Reviews.html" class="nav-button">Testimonials</a>
+            <a href="contact.html" class="nav-button">Contact Us</a>
+        </div>
     </nav>
 
     <!-- Hero Section -->
