--- a/contact.html
+++ b/contact.html
@@ -452,9 +452,10 @@
             <div class="menu-line" style="width:30px;height:4px;background:#fff;border-radius:2px;"></div>
             <div class="menu-line" style="width:30px;height:4px;background:#fff;border-radius:2px;"></div>
         </div>
-        <a href="Homepage.html" class="logo" style="color:white;position:relative;z-index:2;">VOYA</a>
+        <a href="index.html" class="logo" style="color:white;position:relative;z-index:2;">VOYA</a>
         <div class="nav-menu" id="navMenu" role="menu" style="position:absolute;right:2rem;top:50%;transform:translateY(-50%);display:none;flex-direction:row;gap:2rem;background:rgba(0,0,0,0.8);padding:1rem 2rem;border-radius:30px;">
-            <a href="Homepage.html" class="nav-button">Home</a>
+            <a href="index.html" class="nav-button">Home</a>
+            <a href="Aboutus.html" class="nav-button">About Us</a>
             <a href="form.html" class="nav-button">Begin Your Journey</a>
             <a href="experience.html" class="nav-button">Our Experiences</a>
             <a href="Reviews.html" class="nav-button">Testimonials</a>
