Update video tags to use Cloudinary URLs

--- a/form.html
+++ b/form.html
@@ -72,7 +72,7 @@
 
   <section class="relative h-screen flex items-center justify-center overflow-hidden">
     <video autoplay loop muted playsinline class="absolute w-full h-full object-cover">
-      <source src="18.mp4" type="video/mp4">
+      <source src="https://res.cloudinary.com/ddiofei79/video/upload/v1754638247/18_z9oye1.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     
