--- a/index.html
+++ b/index.html
@@ -869,7 +869,7 @@
 
   <main>
     <section id="hero">
-      <video src="final.mp4" autoplay loop muted poster="hero-poster.jpg" aria-label="Background video of travel destinations"></video>
+      <video src="https://res.cloudinary.com/ddiofei79/video/upload/v1754638251/final_rleuhd.mp4" autoplay loop muted poster="hero-poster.jpg" aria-label="Background video of travel destinations"></video>
       <div class="overlay">
         <div class="logo">VOYA</div>
         <div class="content-wrapper">
