--- a/form.html
+++ b/form.html
@@ -107,6 +107,10 @@
           
           <form id="travel-form" class="space-y-6">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+            <!-- Honeypot (hidden from users, visible to bots) -->
+            <input type="text" name="hp_field" id="hp_field" style="display:none" autocomplete="off" tabindex="-1">
+            <!-- Honeypot (hidden from users, visible to bots) -->
+            <input type="text" name="hp_field" id="hp_field" style="display:none" autocomplete="off" tabindex="-1">
               <div>
                 <label for="firstName" class="block text-sm font-medium text-gray-700">First name*</label>
                 <input
