Fix form submit: remove duplicate handler, add modal, preserve design

--- a/form.html
+++ b/form.html
@@ -109,8 +109,6 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
             <!-- Honeypot (hidden from users, visible to bots) -->
             <input type="text" name="hp_field" id="hp_field" style="display:none" autocomplete="off" tabindex="-1">
-            <!-- Honeypot (hidden from users, visible to bots) -->
-            <input type="text" name="hp_field" id="hp_field" style="display:none" autocomplete="off" tabindex="-1">
               <div>
                 <label for="firstName" class="block text-sm font-medium text-gray-700">First name*</label>
                 <input
@@ -521,7 +519,7 @@
   </script>
   <script>
     (function(){
-      const SCRIPT_URL = "PASTE_YOUR_APPS_SCRIPT_URL_HERE"; // paste the Apps Script /exec URL
+      const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbz_G9xVnD1XmWwCrusDpmZ3iq9V-HDvSdd6BfiXiclVhn7QD0EZJ3yWyHyufBJXHBc/exec"; // paste the Apps Script /exec URL
 
       const form = document.getElementById('travel-form');
       if (!form) return;
