--- a/Aboutus.html
+++ b/Aboutus.html
@@ -1,43 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/png" href="55.png" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - VOYA</title>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600&family=Cormorant+Garamond:wght@300;400;500&display=swap" rel="stylesheet">
     <style>
+        /* Animation for founder cards */
+        @keyframes fadeInUp {
+            from { opacity: 0; transform: translateY(40px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        .founder-card {
+            opacity: 0;
+            animation: fadeInUp 1s cubic-bezier(0.68,-0.55,0.27,1.55) forwards;
+        }
+        .founder-card:nth-child(1) { animation-delay: 0.1s; }
+        .founder-card:nth-child(2) { animation-delay: 0.3s; }
+        .founder-card:nth-child(3) { animation-delay: 0.5s; }
+        /* Button and nav transitions */
+        .btn, .nav-button {
+            transition: background 0.3s, color 0.3s, transform 0.2s;
+        }
+        .btn:hover, .nav-button:hover {
+            background-color: #0099cc;
+            color: #fff;
+            transform: translateY(-2px) scale(1.05);
+        }
+        /* Read More pop-up transition */
+        .founder-description {
+            transition: all 0.4s cubic-bezier(0.68,-0.55,0.27,1.55);
+            background: none !important;
+        }
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: 'Montserrat', 'Inter', Arial, sans-serif; line-height: 1.6; color: #333; }
+        body {
+            font-family: 'Inter', sans-serif;
+            color: #fff;
+            background-color: #000;
+            line-height: 1.6;
+        }
         .header-nav {
             position: fixed; top: 0; left: 0; right: 0; z-index: 100;
             padding: 1rem 2rem; display: flex; justify-content: center; align-items: center;
-            background: rgba(0, 0, 0, 0.7);
+            background: rgba(0, 0, 0, 0.95);
+            border-bottom: 1px solid rgba(255,255,255,0.1);
         }
         .logo {
-            font-family: 'Playfair Display', serif; font-size: 1.8rem; font-weight: 700;
-            color: white; text-decoration: none; letter-spacing: 2px; position: relative; z-index: 2;
+            font-family: 'Playfair Display', serif;
+            font-size: 2.5rem;
+            font-weight: 600;
+            color: white;
+            letter-spacing: 3px;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+            position: relative;
+            z-index: 2;
         }
         .nav-button {
-            background-color: #00bcd4; color: white; padding: 10px 20px; border: none;
-            font-family: 'Inter', sans-serif; font-size: 0.9rem; font-weight: 600;
-            text-transform: uppercase; cursor: pointer; transition: background-color 0.3s ease;
-            text-decoration: none; display: inline-block;
+            background-color: #00bfff;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            font-family: 'Inter', sans-serif;
+            font-size: 1.1rem;
+            font-weight: 400;
+            text-transform: none;
+            cursor: pointer;
+            transition: background 0.3s, color 0.3s, transform 0.2s;
+            text-decoration: none;
+            display: block;
+            border-bottom: 1px solid rgba(255,255,255,0.1);
         }
-        .nav-button:hover { background-color: #00acc1; }
+        .nav-button:last-child { border-bottom: none; }
+        .nav-button:hover {
+            background-color: #0099cc;
+            color: #fff;
+            transform: translateX(10px);
+        }
         .about-section {
             display: grid; grid-template-columns: 1fr 1fr; gap: 0; min-height: 80vh;
-            background: #fff; margin-top: 80px;
+            background: linear-gradient(135deg, rgba(0,0,0,0.7), rgba(0,0,0,0.9));
+            margin-top: 80px;
         }
         .about-content {
             padding: 4rem 3rem; display: flex; flex-direction: column; justify-content: center;
         }
         .about-title {
-            font-family: 'Playfair Display', serif; font-size: 2.5rem; font-weight: 700;
-            color: #000; margin-bottom: 1.5rem; text-align: left;
+            font-family: 'Playfair Display', serif;
+            font-size: 3.5rem;
+            font-weight: 600;
+            color: #fff;
+            margin-bottom: 1.5rem;
+            text-align: left;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
         }
         .about-content p {
-            font-family: 'Inter', sans-serif; font-size: 1.15rem; color: #333;
-            margin-bottom: 1.5rem; line-height: 1.7;
+            font-family: 'Inter', sans-serif;
+            font-size: 1.15rem;
+            color: #fff;
+            margin-bottom: 1.5rem;
+            line-height: 1.7;
         }
         .about-content .highlight { color: #00bcd4; font-weight: 500; }
         .about-content .cta-button {
@@ -50,7 +112,17 @@
         .about-image { width: 100%; height: 100%; object-fit: cover; display: block; }
         .about-img-container { width: 100%; height: 100%; overflow: hidden; }
         .founders-section {
-            background: #f8f9fa; padding: 4rem 2rem; text-align: center;
+            background: linear-gradient(135deg, #fff 60%, #e0f7fa 100%);
+            padding: 4rem 2rem;
+            text-align: center;
+        }
+        .founders-title {
+            color: #222;
+        }
+        .founder-card {
+            background: #222;
+            color: #fff;
+            box-shadow: 0 4px 24px rgba(0,188,212,0.13);
         }
         .founders-title {
             font-family: 'Playfair Display', serif; font-size: 2rem; font-weight: 700;
@@ -61,7 +133,7 @@
         }
         .founder-card {
             background: #fff; border-radius: 12px; box-shadow: 0 2px 10px rgba(0,0,0,0.07);
-            padding: 1.5rem; width: 30%; /* Equal width distribution */
+            padding: 2.5rem; width: 38%; min-width: 320px; max-width: 420px;
             display: flex; flex-direction: column; align-items: center;
         }
         .founder-img {
@@ -170,7 +242,7 @@
             <a href="index.html" class="logo" style="font-family:'Playfair Display',serif;font-size:2.5rem;font-weight:600;color:white;letter-spacing:3px;text-shadow:2px 2px 4px rgba(0,0,0,0.5);">VOYA</a>
         </div>
         <div style="flex:1;"></div>
-        <div class="nav-menu" id="navMenu" role="menu" style="position:absolute;right:2rem;top:50%;transform:translateY(-50%);display:none;flex-direction:row;gap:2rem;background:rgba(0,0,0,0.8);padding:1rem 2rem;border-radius:30px;">
+    <div class="nav-menu" id="navMenu" role="menu" style="position:absolute;left:2rem;top:80px;display:none;flex-direction:column;gap:0;background:rgba(0,0,0,0.95);padding:1rem 0.5rem;border-radius:8px;width:220px;">
             <a href="index.html" class="nav-button">Home</a>
             <a href="Aboutus.html" class="nav-button">About Us</a>
             <a href="form.html" class="nav-button">Begin Your Journey</a>
@@ -209,22 +281,29 @@
                 <img src="founder1.jpeg" alt="Founder 1" class="founder-img">
                 <div class="founder-name">Nishant Ingle </div>
                 <div class="founder-role">Co-Founder</div>
-                <button class="read-more-btn" style="margin-top:1rem;background:#00bcd4;color:#fff;padding:8px 18px;border:none;border-radius:4px;font-size:0.95rem;cursor:pointer;transition:background 0.3s;">Read More</button>
-                <p class="founder-description" style="display:none;">Nishant is passionate about creating unique travel experiences.</p>
+                <p class="founder-description">Nishant is passionate about creating unique travel experiences and loves discovering offbeat destinations.</p>
             </div>
             <div class="founder-card">
                 <img src="founder2.png" alt="Founder 2" class="founder-img">
                 <div class="founder-name">Aryan Sethia </div>
                 <div class="founder-role">Co-Founder</div>
-                <button class="read-more-btn" style="margin-top:1rem;background:#00bcd4;color:#fff;padding:8px 18px;border:none;border-radius:4px;font-size:0.95rem;cursor:pointer;transition:background 0.3s;">Read More</button>
-                <p class="founder-description" style="display:none;">Aryan focuses on the logistics and planning of our trips.</p>
+                <p class="founder-description">Aryan ensures every trip runs smoothly and loves creating surprise elements for travelers.</p>
             </div>
             <div class="founder-card">
+    <script>
+        // Animate founder cards on load
+        document.addEventListener('DOMContentLoaded', function() {
+            document.querySelectorAll('.founder-card').forEach(function(card, i) {
+                setTimeout(function() {
+                    card.style.opacity = '1';
+                }, 100 + i * 200);
+            });
+        });
+    </script>
                 <img src="founder3.jpeg" alt="Founder 3" class="founder-img">
                 <div class="founder-name">Keshav Sahu</div>
                 <div class="founder-role">Co-Founder</div>
-                <button class="read-more-btn" style="margin-top:1rem;background:#00bcd4;color:#fff;padding:8px 18px;border:none;border-radius:4px;font-size:0.95rem;cursor:pointer;transition:background 0.3s;">Read More</button>
-                <p class="founder-description" style="display:none;">Keshav handles marketing and customer relations.</p>
+                <p class="founder-description">Keshav connects VOYA with travelers and is committed to building lasting relationships.</p>
             </div>
         </div>
     </section>
@@ -299,11 +378,11 @@
                     desc.style.color = '#00796b';
                     desc.style.padding = '1rem';
                     desc.style.borderRadius = '8px';
-                    desc.style.position = 'absolute';
-                    desc.style.top = '100%';
-                    desc.style.left = '50%';
-                    desc.style.transform = 'translateX(-50%)';
-                    desc.style.zIndex = '10';
+                    desc.style.position = 'static';
+                    desc.style.top = 'unset';
+                    desc.style.left = 'unset';
+                    desc.style.transform = 'none';
+                    desc.style.zIndex = 'unset';
                     desc.style.boxShadow = '0 4px 18px rgba(0,188,212,0.13)';
                 }
             });
