updated hidden page added more media

--- a/hidden.html
+++ b/hidden.html
@@ -90,12 +90,21 @@
             </div>
         </div>
         <br>
-    <div>Philosophy behind our design</div>
-    <div id="philosophy-section">
+    <h2 style="background-color: #fdfefd;">Philosophy behind our design</h2>
+    <div>
         <h3>Minimalist and Modern</h3>
-        <div class="philosophy-example">Example: Large hero section with a dark background, simple navigation, and clean white text.</div>
+        <div style="text-align:center;">
+          <img src="62.jpg" alt="Description" style="width: 800px; height:auto;">
+        </div>
+        <div class="philosophy-example">
+            <p>Large hero section with a dark background, simple navigation, and clean white text.</p>
+            <p>Clear CTA button, Minimalistic hamburger menu, No extra sections on the hero </p>
+        </div>
         <h3>Consistency</h3>
-        <div class="philosophy-example">Example: All pages use 'Inter' and 'Playfair Display' fonts, #000 backgrounds, #fff text, and #00bfff accent color for buttons and links.</div>
+        <div class="philosophy-example">
+            <p>All pages use 'Inter'<img src="65.png" style="width: 100px; height:auto;"> and 'Playfair Display' fonts <img src="66.png" style="width: 100px; height:auto;"></p>
+            <p>Consistent color palette of black and white background colors</p> 
+        </div>
         <h3>Visual Hierarchy</h3>
         <div class="philosophy-example">Example: Bold headings, clear section titles, and experience cards with drop shadows and spacing.</div>
         <h3>Interactivity</h3>
