--- a/hidden.html
+++ b/hidden.html
@@ -10,7 +10,7 @@
         background-color: #0ecaef;
         font-family: Arial, sans-serif;
         color: #333;
-
+        font-size: 20px;
     }
     
     h1 {
@@ -78,14 +78,24 @@
         <div>
             
             <div><img src="60.jpg" alt="Beautiful scenery"/> </div>
-            <p>VOYA is a travel company dedicated to <strong>curating surprise journeys across India.</strong> We believe travel should be an adventure, filled with mystery, excitement, and unforgettable stories. Our team crafts unique itineraries where the destination, activities, and accommodations are revealed little by little, making every moment a delightful surprise.</p>
+            <p style="font-size: 30px;">VOYA is a travel company dedicated to <strong>curating surprise journeys across India.</strong> We believe travel should be an adventure, filled with mystery, excitement, and unforgettable stories. Our team crafts unique itineraries where the destination, activities, and accommodations are revealed little by little, making every moment a delightful surprise.</p>
         </div>
     <h2 style="background-color: #fdfefd;">How it Works?</h2>    
         <div>
             <div><img src="61.jpg" alt="Beautiful scenery"/></div>
-                <ul>
+                <ul style="font-size: 30px;">
                     <li>Our philosophy is rooted in authenticity, local expertise, and personal connection. We work with passionate founders and travel experts who have explored every corner of India, ensuring each trip is filled with hidden gems, unconventional activities, and roads less travelled.</li>
                     <li>With VOYA, every journey is tailored to your preferences and budget. From family vacations to luxury getaways, we handle all the details so you can focus on the experience. Our goal is to transform how you experience India—making travel not just a trip, but a story waiting to unfold.</li>
+                </ul>
+            </div>
+        </div>
+        <br>
+    <h2 style="background-color: #fdfefd;">Who is our target market?</h2>    
+        <div>
+            <div><img src="67.jpg" alt="Target market background"/></div>
+                <ul style="font-size: 30px;">
+                    <li>Youngsters, Working Proffessionals and Young families are our primary target market.</li>
+                    <li>Voya people with no experience of booking trips or people who do not want to spend a lot of time on the web or even people who want to surprised along their journey</li>
                 </ul>
             </div>
         </div>
@@ -97,20 +107,33 @@
           <img src="62.jpg" alt="Description" style="width: 800px; height:auto;">
         </div>
         <div class="philosophy-example">
-            <p>Large hero section with a dark background, simple navigation, and clean white text.</p>
-            <p>Clear CTA button, Minimalistic hamburger menu, No extra sections on the hero </p>
+            <p>Large hero section with a dark background, simple navigation, and clean white text in both hindi and english.</p>
+            <p>Clear CTA button, customized video background, Minimalistic hamburger menu, No extra sections on the hero </p>
+            <p style="font-weight: bold;">Helps user focus on what matters most: The Experience</p>
         </div>
-        <h3>Consistency</h3>
+        <hr>
+        <h3>Consistency and Simplicity in fonts</h3>
         <div class="philosophy-example">
             <p>All pages use 'Inter'<img src="65.png" style="width: 100px; height:auto;"> and 'Playfair Display' fonts <img src="66.png" style="width: 100px; height:auto;"></p>
             <p>Consistent color palette of black and white background colors</p> 
+            <p style="font-weight: bold;">Helps create a unified and professional look. Inter font ensures clarity and legibility while playfair Display helps add elegance and personality</p>
         </div>
+        <hr>
         <h3>Visual Hierarchy</h3>
-        <div class="philosophy-example">Example: Bold headings, clear section titles, and experience cards with drop shadows and spacing.</div>
+        <div style="text-align:center;">
+          <img src="70.jpg" alt="Description" style="width: 800px; height:auto;">
+        </div>
+        <div class="philosophy-example">
+            <p>Bold headings, clear section titles, and experience cards with drop shadows and spacing.</p>
+            <p style="font-weight: bold;">Helps guide attention of the user, making the site easier to scan/glimpse through and improves readability. Makes the content organized</p>
+        </div>
+        <hr>
         <h3>Interactivity</h3>
         <div class="philosophy-example">Example: Fade-in animations for cards, smooth transitions on buttons and navigation menus.</div>
+        <hr>
         <h3>Accessibility</h3>
         <div class="philosophy-example">Example: High color contrast, large clickable areas, readable fonts, and keyboard-friendly navigation.</div>
+        <hr>
         <h3>Storytelling</h3>
         <div class="philosophy-example">Example: Founder bios, testimonials, and experience cards that build trust and excitement.</div>
         <h3>Mobile-Friendly</h3>
