again updated hidden webpage and improvded fonts added media

--- a/hidden.html
+++ b/hidden.html
@@ -129,21 +129,23 @@
         </div>
         <hr>
         <h3>Interactivity</h3>
-        <div class="philosophy-example">Example: Fade-in animations for cards, smooth transitions on buttons and navigation menus.</div>
+        <div class="philosophy-example">Example: 
+            <p>Fade-in animations for cards, smooth transitions on buttons and navigation menus.</p>
+            <div style="text-align:center;">
+                <img src="76.png" alt="Description" style="width: 800px; height:auto;">
+            </div>
+            <p>Quick and hassle-free process for users to connect with VOYA and start their mystery vacation through filling short qnuiry forms</p>
+        </div>
         <hr>
         <h3>Accessibility</h3>
-        <div class="philosophy-example">Example: High color contrast, large clickable areas, readable fonts, and keyboard-friendly navigation.</div>
-        <hr>
-        <h3>Storytelling</h3>
-        <div class="philosophy-example">Example: Founder bios, testimonials, and experience cards that build trust and excitement.</div>
-        <h3>Mobile-Friendly</h3>
-        <div class="philosophy-example">Example: Responsive grids and layouts that adapt to all screen sizes.</div>
-        <h3>Summary</h3>
-        <ul>
-            <li>Inviting, trustworthy, and visually appealing experience</li>
-            <li>Reflects the mystery and excitement of travel with VOYA</li>
-            <li>Maintains clarity and ease of use for all users</li>
-        </ul>
+        <div class="philosophy-example">Example: 
+            High color contrast, large clickable areas, readable fonts, and keyboard-friendly navigation.
+        </div>
+        <div style="text-align:center; margin-top:10px; font-size:18px; color:#222; background:#f7f7f7; border-radius:8px; padding:12px; max-width:800px; margin-left:auto; margin-right:auto;">
+            <strong>How does this help?</strong><br>
+            These features ensure that everyone, including users with visual or motor impairments, can easily access and use the site. High color contrast makes text and buttons stand out for those with low vision. Large clickable areas and readable fonts reduce frustration and errors, especially for users with limited dexterity or screen readers. Keyboard-friendly navigation allows users who cannot use a mouse to move through the site efficiently, making VOYA inclusive and welcoming to all.
+        </div>
+        
     </div>
 </body>
 </html>
