--- a/index.html
+++ b/index.html
@@ -644,8 +644,8 @@
         overflow: visible;
     }
     .testimonial-card blockquote {
-        font-family: 'Cormorant Garamond', serif;
-        font-size: 1rem;
+  font-family: 'Cormorant Garamond', serif;
+  font-size: 1.18rem;
         line-height: 1.7;
         color: #555;
         margin-bottom: 1.5rem;
@@ -659,15 +659,15 @@
         color: #2c2c2c;
     }
     .testimonial-card .author {
-        font-weight: 600;
-        font-family: 'Playfair Display', serif;
-        font-size: 1.1rem;
+  font-weight: 600;
+  font-family: 'Playfair Display', serif;
+  font-size: 1.25rem;
     }
     .testimonial-card .details {
-        font-weight: 400;
-        color: #777;
-        margin-top: 0.25rem;
-        font-size: 0.9rem;
+  font-weight: 400;
+  color: #777;
+  margin-top: 0.25rem;
+  font-size: 1.05rem;
     }
     .btn-secondary {
         padding: 0.8rem 2.5rem;
@@ -742,8 +742,8 @@
         letter-spacing: 0.5px;
     }
     .how-step p {
-        font-family: 'Inter', sans-serif;
-        font-size: 0.92rem;
+  font-family: 'Inter', sans-serif;
+  font-size: 1.15rem;
         font-weight: 400;
         max-width: 500px;
         margin: 0 auto;
@@ -1010,15 +1010,15 @@
             <div style="height:3.2rem;"></div>
             <div class="how-it-works-steps">
                 <div class="how-step">
-                    <h3>Step 1: Share Your Dream</h3>
+                    <h3 style="font-weight: bold;">Step 1: Share Your Dream</h3>
                     <p>Tell us your travel style—are you seeking adventure, romance, or cultural immersion? We listen to your desires to craft the perfect surprise.</p>
                 </div>
                 <div class="how-step">
-                    <h3>Step 2: Trust the Process</h3>
+                    <h3 style="font-weight: bold;">Step 2: Trust the Process</h3>
                     <p>This is where the magic happens. We meticulously plan every detail, from hidden-gem stays to unique local experiences, all kept secret from you.</p>
                 </div>
                 <div class="how-step">
-                    <h3>Step 3: Reveal Your Adventure</h3>
+                    <h3 style="font-weight: bold;">Step 3: Reveal Your Adventure</h3>
                     <p>Just before you depart, you'll receive your first clue. The rest of your bespoke journey is revealed one envelope at a time, creating a story you'll never forget.</p>
                 </div>
             </div>
