--- a/form.html
+++ b/form.html
@@ -163,12 +163,12 @@
                 class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 p-2 border"
               >
                 <option value="">Select holiday type</option>
-                <option value="adventure">Adventure</option>
-                <option value="cultural">Cultural</option>
-                <option value="wellness">Wellness & Spa</option>
-                <option value="honeymoon">Honeymoon</option>
-                <option value="family">Family Vacation</option>
-                <option value="luxury">Luxury Getaway</option>
+                <option value="TrekkingTrails">Trekking Trails</option>
+                <option value="culturalnCraft">Culture and Craft</option>
+                <option value="Romanticescapes">Romantic Escapes</option>
+                <option value="TeanTemples">Tea and Temples</option>
+                <option value="JungleWhisperes">Jungle Whisperers</option>
+                <option value="Mystery">Mystery Package</option>
               </select>
             </div>
 
@@ -233,19 +233,19 @@
               <label class="block text-sm font-medium text-gray-700 mb-4">How much are you prepared to spend? (INR)</label>
               <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
                 <div>
-                  <input type="radio" id="r1" name="budget" value="10000" class="hidden peer" checked>
+                  <input type="radio" id="r1" name="budget" value="10000-25000" class="hidden peer" checked>
                   <label for="r1" class="flex flex-col items-center justify-between rounded-md border-2 border-gray-200 bg-white p-4 hover:bg-gray-50 hover:text-gray-900 peer-checked:border-blue-500 cursor-pointer">
                     ₹10,000 - 25,000
                   </label>
                 </div>
                 <div>
-                  <input type="radio" id="r2" name="budget" value="15000" class="hidden peer">
+                  <input type="radio" id="r2" name="budget" value="25000-50000" class="hidden peer">
                   <label for="r2" class="flex flex-col items-center justify-between rounded-md border-2 border-gray-200 bg-white p-4 hover:bg-gray-50 hover:text-gray-900 peer-checked:border-blue-500 cursor-pointer">
                     ₹25,000 - 50,000
                   </label>
                 </div>
                 <div>
-                  <input type="radio" id="r3" name="budget" value="20000" class="hidden peer">
+                  <input type="radio" id="r3" name="budget" value="50000+" class="hidden peer">
                   <label for="r3" class="flex flex-col items-center justify-between rounded-md border-2 border-gray-200 bg-white p-4 hover:bg-gray-50 hover:text-gray-900 peer-checked:border-blue-500 cursor-pointer">
                     ₹50,000+
                   </label>
