--- a/hidden.html
+++ b/hidden.html
@@ -139,12 +139,11 @@
         <hr>
         <h3>Accessibility</h3>
         <div class="philosophy-example">Example: 
-            High color contrast, large clickable areas, readable fonts, and keyboard-friendly navigation.
+            <p>High color contrast, large clickable areas, readable fonts, and keyboard-friendly navigation.</p>
+            <p>These features ensure that everyone, including users with visual or motor impairments, can easily access and use the site. High color contrast makes text and buttons stand out for those with low vision. Large clickable areas and readable fonts reduce frustration and errors, especially for users with limited dexterity or screen readers. Keyboard-friendly navigation allows users who cannot use a mouse to move through the site efficiently, making VOYA inclusive and welcoming to all.</p>
         </div>
-        <div style="text-align:center; margin-top:10px; font-size:18px; color:#222; background:#f7f7f7; border-radius:8px; padding:12px; max-width:800px; margin-left:auto; margin-right:auto;">
-            <strong>How does this help?</strong><br>
-            These features ensure that everyone, including users with visual or motor impairments, can easily access and use the site. High color contrast makes text and buttons stand out for those with low vision. Large clickable areas and readable fonts reduce frustration and errors, especially for users with limited dexterity or screen readers. Keyboard-friendly navigation allows users who cannot use a mouse to move through the site efficiently, making VOYA inclusive and welcoming to all.
-        </div>
+       
+            </div>
         
     </div>
 </body>
