--- a/index.html
+++ b/index.html
@@ -1076,10 +1076,12 @@
         <div class="footer-section">
           <h4>Newsletter</h4>
           <p>Subscribe to receive updates about new destinations and special offers.</p>
-          <form class="newsletter-form" action="#" method="POST">
-            <input type="email" placeholder="Enter your email" required>
-            <button type="submit">Subscribe</button>
+          <form id="newsletter-form" class="newsletter-form" action="#" method="POST" onsubmit="return false;">
+            <input type="email" id="newsletterEmail" name="newsletterEmail" placeholder="Enter your email" required>
+            <input type="text" id="newsletter-hp" name="hp_field" style="display:none" autocomplete="off" tabindex="-1">
+            <button type="submit" id="newsletter-submit">Subscribe</button>
           </form>
+          <div id="newsletter-msg" style="display:none;margin-top:0.5rem;color:#0b69ff;"></div>
         </div>
       </div>
       <div class="footer-bottom">
@@ -1403,5 +1405,79 @@
       }
     });
   </script>
+  <script>
+      document.addEventListener('DOMContentLoaded', function(){
+        const NEWS_URL = "https://script.google.com/macros/s/AKfycbwekokgiEgWbPVH5TtBgpEJLdpxjEMg3F8C6eZ6h5cQmM9u93vWwMtIa2AaWfzepA0/exec"; // <-- paste your /exec URL here
+        const form = document.getElementById('newsletter-form');
+        const msg = document.getElementById('newsletter-msg');
+
+        if (!form) return;
+
+        form.addEventListener('submit', async function(e){
+          e.preventDefault();
+          msg.style.display = 'none';
+
+          const emailInput = document.getElementById('newsletterEmail');
+          const hp = document.getElementById('newsletter-hp');
+          const submitBtn = document.getElementById('newsletter-submit');
+
+          // Basic client validation
+          const emailVal = (emailInput.value || '').trim();
+          const re = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+          if (!re.test(emailVal)) {
+            msg.style.color = '#b91c1c';
+            msg.textContent = 'Please enter a valid email address.';
+            msg.style.display = 'block';
+            return;
+          }
+
+          // Honeypot check
+          if (hp && hp.value.trim() !== '') {
+            console.warn('Honeypot triggered; aborting.');
+            return;
+          }
+
+          submitBtn.disabled = true;
+          try {
+            const fd = new FormData();
+            fd.append('newsletterEmail', emailVal);
+            fd.append('hp_field', hp ? hp.value : '');
+            fd.append('source', 'footer-newsletter');
+
+            const resp = await fetch(NEWS_URL, {
+              method: 'POST',
+              body: fd,
+              mode: 'cors'
+            });
+
+            const json = await resp.json().catch(()=>({}));
+
+            if (resp.ok && json.result === 'success') {
+              msg.style.color = '#059669'; // green
+              msg.textContent = 'Thanks — you are subscribed! Check your inbox for a confirmation email.';
+              msg.style.display = 'block';
+              form.reset();
+            } else if (json.result === 'spam') {
+              msg.style.color = '#666';
+              msg.textContent = 'Thanks.';
+              msg.style.display = 'block';
+              form.reset();
+            } else {
+              msg.style.color = '#b91c1c';
+              msg.textContent = (json && json.message) ? json.message : 'Subscription failed — please try again later.';
+              msg.style.display = 'block';
+            }
+          } catch (err) {
+            console.error('Newsletter submit error', err);
+            msg.style.color = '#b91c1c';
+            msg.textContent = 'Network error — please try again later.';
+            msg.style.display = 'block';
+          } finally {
+            submitBtn.disabled = false;
+          }
+        });
+      });
+  </script>
+
 </body>
 </html>
